crates/vectorscan-sys/src/bindings.rs

#[doc = " The type of the callback function that will be used by Hyperscan to allocate\n more memory at runtime as required, for example in @ref hs_open_stream() to\n allocate stream state.\n\n If Hyperscan is to be used in a multi-threaded, or similarly concurrent\n environment, the allocation function will need to be re-entrant, or\n similarly safe for concurrent use.\n\n @param size\n      The number of bytes to allocate.\n @return\n      A pointer to the region of memory allocated, or NULL on error."]
pub type hs_alloc_t =
    ::std::option::Option<unsafe extern "C" fn(size: usize) -> *mut ::std::os::raw::c_void>;
#[doc = " The type of the callback function that will be used by Hyperscan to free\n memory regions previously allocated using the @ref hs_alloc_t function.\n\n @param ptr\n      The region of memory to be freed."]
pub type hs_free_t = ::std::option::Option<unsafe extern "C" fn(ptr: *mut ::std::os::raw::c_void)>;
extern "C" {
    #[doc = " Set the allocate and free functions used by Hyperscan for allocating\n memory at runtime for stream state, scratch space, database bytecode,\n and various other data structure returned by the Hyperscan API.\n\n The function is equivalent to calling @ref hs_set_stream_allocator(),\n @ref hs_set_scratch_allocator(), @ref hs_set_database_allocator() and\n @ref hs_set_misc_allocator() with the provided parameters.\n\n This call will override any previous allocators that have been set.\n\n Note: there is no way to change the allocator used for temporary objects\n created during the various compile calls (@ref hs_compile(), @ref\n hs_compile_multi(), @ref hs_compile_ext_multi()).\n\n @param alloc_func\n      A callback function pointer that allocates memory. This function must\n      return memory suitably aligned for the largest representable data type\n      on this platform.\n\n @param free_func\n      A callback function pointer that frees allocated memory.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_set_allocator(alloc_func: hs_alloc_t, free_func: hs_free_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Set the allocate and free functions used by Hyperscan for allocating memory\n for database bytecode produced by the compile calls (@ref hs_compile(), @ref\n hs_compile_multi(), @ref hs_compile_ext_multi()) and by database\n deserialization (@ref hs_deserialize_database()).\n\n If no database allocation functions are set, or if NULL is used in place of\n both parameters, then memory allocation will default to standard methods\n (such as the system malloc() and free() calls).\n\n This call will override any previous database allocators that have been set.\n\n Note: the database allocator may also be set by calling @ref\n hs_set_allocator().\n\n Note: there is no way to change how temporary objects created during the\n various compile calls (@ref hs_compile(), @ref hs_compile_multi(), @ref\n hs_compile_ext_multi()) are allocated.\n\n @param alloc_func\n      A callback function pointer that allocates memory. This function must\n      return memory suitably aligned for the largest representable data type\n      on this platform.\n\n @param free_func\n      A callback function pointer that frees allocated memory.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_set_database_allocator(alloc_func: hs_alloc_t, free_func: hs_free_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Set the allocate and free functions used by Hyperscan for allocating memory\n for items returned by the Hyperscan API such as @ref hs_compile_error_t, @ref\n hs_expr_info_t and serialized databases.\n\n If no misc allocation functions are set, or if NULL is used in place of both\n parameters, then memory allocation will default to standard methods (such as\n the system malloc() and free() calls).\n\n This call will override any previous misc allocators that have been set.\n\n Note: the misc allocator may also be set by calling @ref hs_set_allocator().\n\n @param alloc_func\n      A callback function pointer that allocates memory. This function must\n      return memory suitably aligned for the largest representable data type\n      on this platform.\n\n @param free_func\n      A callback function pointer that frees allocated memory.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_set_misc_allocator(alloc_func: hs_alloc_t, free_func: hs_free_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Set the allocate and free functions used by Hyperscan for allocating memory\n for scratch space by @ref hs_alloc_scratch() and @ref hs_clone_scratch().\n\n If no scratch allocation functions are set, or if NULL is used in place of\n both parameters, then memory allocation will default to standard methods\n (such as the system malloc() and free() calls).\n\n This call will override any previous scratch allocators that have been set.\n\n Note: the scratch allocator may also be set by calling @ref\n hs_set_allocator().\n\n @param alloc_func\n      A callback function pointer that allocates memory. This function must\n      return memory suitably aligned for the largest representable data type\n      on this platform.\n\n @param free_func\n      A callback function pointer that frees allocated memory.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_set_scratch_allocator(alloc_func: hs_alloc_t, free_func: hs_free_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Set the allocate and free functions used by Hyperscan for allocating memory\n for stream state by @ref hs_open_stream().\n\n If no stream allocation functions are set, or if NULL is used in place of\n both parameters, then memory allocation will default to standard methods\n (such as the system malloc() and free() calls).\n\n This call will override any previous stream allocators that have been set.\n\n Note: the stream allocator may also be set by calling @ref\n hs_set_allocator().\n\n @param alloc_func\n      A callback function pointer that allocates memory. This function must\n      return memory suitably aligned for the largest representable data type\n      on this platform.\n\n @param free_func\n      A callback function pointer that frees allocated memory.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_set_stream_allocator(alloc_func: hs_alloc_t, free_func: hs_free_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Utility function for identifying this release version.\n\n @return\n      A string containing the version number of this release build and the\n      date of the build. It is allocated statically, so it does not need to\n      be freed by the caller."]
    pub fn hs_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Utility function to test the current system architecture.\n\n Hyperscan requires the Supplemental Streaming SIMD Extensions 3 instruction\n set. This function can be called on any x86 platform to determine if the\n system provides the required instruction set.\n\n This function does not test for more advanced features if Hyperscan has\n been built for a more specific architecture, for example the AVX2\n instruction set.\n\n @return\n      @ref HS_SUCCESS on success, @ref HS_ARCH_ERROR if system does not\n      support Hyperscan."]
    pub fn hs_valid_platform() -> hs_error_t;
}
#[doc = " A type containing error details that is returned by the compile calls (@ref\n hs_compile(), @ref hs_compile_multi() and @ref hs_compile_ext_multi()) on\n failure. The caller may inspect the values returned in this type to\n determine the cause of failure.\n\n Common errors generated during the compile process include:\n\n    - *Invalid parameter*\n\n      An invalid argument was specified in the compile call.\n\n    - *Unrecognised flag*\n\n      An unrecognised value was passed in the flags argument.\n\n    - *Pattern matches empty buffer*\n\n      By default, Hyperscan only supports patterns that will *always*\n      consume at least one byte of input. Patterns that do not have this\n      property (such as `/(abc)?/`) will produce this error unless\n      the @ref HS_FLAG_ALLOWEMPTY flag is supplied. Note that such\n      patterns will produce a match for *every* byte when scanned.\n\n    - *Embedded anchors not supported*\n\n      Hyperscan only supports the use of anchor meta-characters (such as\n      `^` and `$`) in patterns where they could *only* match\n      at the start or end of a buffer. A pattern containing an embedded\n      anchor, such as `/abc^def/`, can never match, as there is no\n      way for `abc` to precede the start of the data stream.\n\n    - *Bounded repeat is too large*\n\n      The pattern contains a repeated construct with very large finite\n      bounds.\n\n    - *Unsupported component type*\n\n      An unsupported PCRE construct was used in the pattern.\n\n    - *Unable to generate bytecode*\n\n      This error indicates that Hyperscan was unable to compile a pattern\n      that is syntactically valid. The most common cause is a pattern that is\n      very long and complex or contains a large repeated subpattern.\n\n    - *Unable to allocate memory*\n\n      The library was unable to allocate temporary storage used during\n      compilation time.\n\n    - *Allocator returned misaligned memory*\n\n      The memory allocator (either malloc() or the allocator set with @ref\n      hs_set_allocator()) did not correctly return memory suitably aligned\n      for the largest representable data type on this platform.\n\n    - *Internal error*\n\n      An unexpected error occurred: if this error is reported, please contact\n      the Hyperscan team with a description of the situation."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hs_compile_error {
    #[doc = " A human-readable error message describing the error."]
    pub message: *mut ::std::os::raw::c_char,
    #[doc = " The zero-based number of the expression that caused the error (if this\n can be determined). If the error is not specific to an expression, then\n this value will be less than zero."]
    pub expression: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_hs_compile_error() {
    const UNINIT: ::std::mem::MaybeUninit<hs_compile_error> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<hs_compile_error>(),
        16usize,
        concat!("Size of: ", stringify!(hs_compile_error))
    );
    assert_eq!(
        ::std::mem::align_of::<hs_compile_error>(),
        8usize,
        concat!("Alignment of ", stringify!(hs_compile_error))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).message) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(hs_compile_error), "::", stringify!(message))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).expression) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(hs_compile_error), "::", stringify!(expression))
    );
}
